--- a/color/default.css
+++ b/color/default.css
@@ -1,38 +1,38 @@
 
 a,.tp-caption a.btn:hover {
-	color: #67b0d1;
+	color: #22b14c;
 }
 .top-nav-collapse {
-	background: #67b0d1;
+	background: #22b14c;
 }
 
 .navbar-custom ul.nav ul.dropdown-menu li a:hover {
-	color: #67b0d1;
+	color: #22b14c;
 }
 
 .owl-theme .owl-controls .owl-page.active span,
 .owl-theme .owl-controls.clickable .owl-page:hover span {
-    background-color: #67b0d1;
+    background-color: #22b14c;
 }
 
 .widget-avatar .avatar:hover {
-    border: 5px solid #67b0d1;
+    border: 5px solid #22b14c;
 }
 
 .bg-skin {
-	background: #67b0d1;
+	background: #22b14c;
 }
 
 form#contact-form input:focus,form#contact-form select:focus,form#contact-form textarea:focus {
-	border-color: #67b0d1;
+	border-color: #22b14c;
 }
 
 footer {
-    background-color: #67b0d1;
+    background-color: #22b14c;
 }
 
 .btn-skin {
   color: #fff;
-  background-color: #67b0d1;
-  border-color: #67b0d1;
+  background-color: #22b14c;
+  border-color: #22b14c;
 }
